--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,11 @@
   padding: 0;
   box-sizing: border-box;
 }
+.container {
+  margin: auto;
+  padding: 1rem;
+  width: 100%;
+}
 
 /* .App {
   font-size: 30px;
