--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,9 @@
 
 :root {
   --ff-kr: 'Noto Sans KR,' sans-serif;
-  --ff-em: 'IBM plex Mono', monospace;
+  --ff-em: 'IBM Plex Mono', monospace;
   color-scheme: dark;
+  /* color-scheme: light; */
 }
 
 * {
@@ -19,12 +20,19 @@
   width: 100%;
 }
 
-/* .App {
-  font-size: 30px;
+@media (max-wigth: 1024px) {
+  .container {
+    width: 100%;
+  }
 }
-.kr {
-  font-family: var(--ff-kr);
-}
-.em {
-  font-family: var(--ff-em);
+/* 
+footer .container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: 1fr 1fr 1fr;
 } */
+
+.vid {
+  width: 80%;
+  box-shadow: 0 0 5px indigo;
+}
