--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -21,7 +21,7 @@ nav {
   border: 1px solid rgb(64, 64, 64);
   width: 40px;
   height: 40px;
-  background: yellow;
+  background: lightyellow;
   border-radius: 100%;
 }
 .navWrapper .logoSimbol .logoDot {
